# Genetic-Algorithm

./: CMakeLists.txt  Makefile  README.md
include/: Individual.h  Matrix.h
resource/: data.txt
src/: Individual.cpp  main.cpp
